# tere

./: .gitignore  README.md  book.toml  default.nix  rust-toolchain.toml  shell.nix
doc/: SUMMARY.md  intro.md  roadmap.md
doc/architecture/: README.md  dbus.md
doc/compare/: mosh.md  openssh.md
doc/dev/: TODO.md  decisions.md  resources.md
doc/dev/background/: dbus.md  pty-stdin-stdout.md  websockets.md
doc/dev/sketch/: README.md  account-store.md  attacks.md  bastion.md  ipc.md  privsep.md  (+3 more)
nix/: mdbook-graphviz-cargo-lock.diff  mdbook-graphviz-draft-chapters.diff  mdbook-graphviz.nix  mdbook-linkcheck.nix  mdbook-mermaid.nix  nixpkgs-nixos-21.05.nix  rust-overlay.nix  tere-nixos-module.nix  vm-adhoc.nix  vm-test-smoke.nix  vm-test-smoke.py  vm-test.nix
server/: Cargo.toml  build.rs
server/src/: dbus_shell.rs  lib.rs  main.rs  pty_master.rs  socket_activation.rs
server/src/app/: mod.rs
server/src/ipc/: fakeipc.rs  handshake.rs  mod.rs  ownedfd.rs  passfd.rs  seqpacket.rs
server/src/proto/: mod.rs  pty.rs  sessions.rs
server/src/proto/pty/: user.rs
server/src/services/pty/: mod.rs  tests.rs  user.rs
server/src/services/sessions/: mod.rs
server/systemd/lib/systemd/system/: tere-pty.socket  tere-pty@.service  tere-sessions.service  tere-sessions.socket
server/systemd/lib/sysusers.d/: 50-tere.conf
server/systemd/share/dbus-1/system.d/: org.tere-shell.conf
server/systemd/share/polkit-1/rules.d/: 50-tere.rules
server/tests/: vm-smoke.rs  vm.rs
server/tests/systemd/: mod.rs
server/tests/vm_test_runner/: mod.rs
task/: upload-mdbook
