[package]
name = "tere-server"
version = "0.1.0"
authors = ["Tommi Virtanen <tv@eagain.net>"]
edition = "2018"

[dependencies]
async-io = "1.4.1"
async-trait = "0.1.50"
bincode = "1.3.3"
blake3 = "0.3.8"
libc = "0.2.95"
scopeguard = "1.1.0"
serde = { version = "1.0.126", features = ["derive"] }
smol = "1.2.5"
smol-potat = "1.1.2"
thiserror = "1.0.25"
zbus = "1.9.1"
zvariant = "2.6.0"

[dev-dependencies]
memfd = "0.4.0"
