[package]
name = "tere-server"
version = "0.1.0"
authors = ["Tommi Virtanen <tv@eagain.net>"]
edition = "2018"

[features]
# For internal use only: Include tests that will actively mess with global system state.
# These tests assume they're as root on a disposable machine with tere-server installed.
# Do not include these in normal `cargo test` runs.
internal-dangerous-tests = []

[dependencies]
bincode = "1.3.3"
blake3 = "0.3.8"
libc = "0.2.95"
scopeguard = "1.1.0"
serde = { version = "1.0.126", features = ["derive"] }
structopt = { version = "0.3.21", default-features = false, features = ["suggestions", "wrap_help"] }
thiserror = "1.0.25"
zbus = "1.9.1"
zvariant = "2.6.0"

[dev-dependencies]
cargo_metadata = "0.13.1"
memfd = "0.4.0"
procfs = "0.9.1"
zvariant_derive = "2.7.0"

[build-dependencies]
blake3 = "0.3.8"
ignore = "0.4.18"
libc = "0.2.97"
